# LegalRAG

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  exmaple_query_logging.txt  pyproject.toml
docs/: evaluation.md  pipeline_breakdown.md
evaluation/LegalBenchRAG/: README.md  __init__.py  eval_precision_recall.py  ingest.py  loader.py  pipeline.py
legalrag/: __init__.py
legalrag/core/: __init__.py  config.py  interfaces.py  models.py
legalrag/ingestion/: __init__.py  chunker.py  embedder.py  indexer.py  loader.py  metadata_extractor.py  pipeline.py
legalrag/opensearch/: __init__.py  client.py
legalrag/query/: __init__.py  formulator.py  generator.py  pipeline.py  reranker.py  retriever.py  router.py
legalrag/utils/: __init__.py  llm_client.py  logging.py
scripts/: ingest.py  query.py
tests/ingestion/: test_chunker.py  test_loader.py  test_metadata_extractor.py
tests/query/: test_formulator.py
